@@ -1,37 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1.1.1 2006/11/03 21:01:49 joerg Exp $
-lib/libXp.la
-lib/pkgconfig/xp.pc
-man/man3/XpCancelDoc.3
-man/man3/XpCancelJob.3
-man/man3/XpCancelPage.3
-man/man3/XpCreateContext.3
-man/man3/XpDestroyContext.3
-man/man3/XpEndDoc.3
-man/man3/XpEndJob.3
-man/man3/XpEndPage.3
-man/man3/XpFreePrinterList.3
-man/man3/XpGetAttributes.3
-man/man3/XpGetContext.3
-man/man3/XpGetDocumentData.3
-man/man3/XpGetImageResolution.3
-man/man3/XpGetLocaleHinter.3
-man/man3/XpGetOneAttribute.3
-man/man3/XpGetPageDimensions.3
-man/man3/XpGetPdmStartParams.3
-man/man3/XpGetPrinterList.3
-man/man3/XpGetScreenOfContext.3
-man/man3/XpInputSelected.3
-man/man3/XpPutDocumentData.3
-man/man3/XpQueryExtension.3
-man/man3/XpQueryScreens.3
-man/man3/XpQueryVersion.3
-man/man3/XpRehashPrinterList.3
-man/man3/XpSelectInput.3
-man/man3/XpSetAttributes.3
-man/man3/XpSetContext.3
-man/man3/XpSetImageResolution.3
-man/man3/XpSetLocaleHinter.3
-man/man3/XpStartDoc.3
-man/man3/XpStartJob.3
-man/man3/XpStartPage.3
-man/man3/libXp.3
