@@ -1,6 +1,0 @@
-$NetBSD: distinfo,v 1.5 2015/11/04 03:28:46 agc Exp $
-
-SHA1 (libXp-1.0.3.tar.bz2) = 9e10371ca8961b50c2d69150a88fc031455699d1
-RMD160 (libXp-1.0.3.tar.bz2) = 98a12f1a77712065355af0a7f51b96e6874b8a7d
-SHA512 (libXp-1.0.3.tar.bz2) = 502a2500ec0f519dae69ac035bf93c65c47e3bc301604aacb350e90043455f3485626194db45208e5521300b282843825e08b7f7c412a7497ffa02f5f1560c8d
-Size (libXp-1.0.3.tar.bz2) = 316717 bytes
