@@ -1,4 +1,0 @@
-The X Print Utilitity Library assists clients when dealing with the X
-Print extension.
-
-This is from the modular X.org.
