@@ -1,4 +1,0 @@
-@comment $NetBSD: PLIST,v 1.2 2009/06/14 18:24:58 joerg Exp $
-include/X11/XprintUtil/xprintutil.h
-lib/libXprintUtil.la
-lib/pkgconfig/xprintutil.pc
