@@ -1,3 +1,0 @@
-Definitions needed by the X Print server, library, and clients.
-
-From the modular X.org X11 project.
