@@ -1,5 +1,0 @@
-@comment $NetBSD: PLIST,v 1.3 2012/05/29 14:18:48 wiz Exp $
-include/X11/extensions/Print.h
-include/X11/extensions/Printstr.h
-lib/pkgconfig/printproto.pc
-man/man7/Xprint.7
