@@ -1,4 +1,0 @@
-This package contains xplsprinters, a program to query the list of Xprint
-servers and their attributes.
-
-This is from the modular X.org project.
