@@ -1,4 +1,0 @@
-This package contains xprehashprinterlint, a program to recomputer the
-list of available Xprint servers.
-
-This is from the modular X.org project.
