@@ -1,3 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1.1.1 2007/04/12 15:08:22 joerg Exp $
-bin/xprehashprinterlist
-man/man1/xprehashprinterlist.1
