@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.1406 2019/03/20 12:16:56 wiz Exp $
+$NetBSD: CHANGES-2019,v 1.1407 2019/03/20 12:18:47 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -2245,3 +2245,9 @@ Changes to the packages collection and infrastructure in 2019:
 	Updated x11/xdpyinfo to 1.3.2nb1 [wiz 2019-03-20]
 	Removed x11/liblbxutil [wiz 2019-03-20]
 	Updated meta-pkgs/modular-xorg-libs to 1.6 [wiz 2019-03-20]
+	Removed x11/libXp [wiz 2019-03-20]
+	Removed x11/libXprintAppUtil [wiz 2019-03-20]
+	Removed x11/libXprintUtil [wiz 2019-03-20]
+	Removed x11/printproto [wiz 2019-03-20]
+	Removed x11/xplsprinters [wiz 2019-03-20]
+	Removed x11/xprehashprinterlist [wiz 2019-03-20]
